started working on add task page

--- a/src/app/+tasks/add-task/add-task.component.html
+++ b/src/app/+tasks/add-task/add-task.component.html
@@ -1,2 +1,2 @@
-<h2>Add new task</h2>
-<fluentask-task-input></fluentask-task-input>
+<h3>Add new task</h3>
+<fluentask-task-input [saveTask]="save"></fluentask-task-input>
