--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@ body {
   font-family: "Noto Sans", "Helvetica Neue", sans-serif;
 }
 
+.app-content {
+  padding: 10px;
+}
+
 .app-sidenav {
   min-width: 80%;
 
