redesign add task page

--- a/src/app/+tasks/add-task/add-task.component.html
+++ b/src/app/+tasks/add-task/add-task.component.html
@@ -1,2 +1,3 @@
-<h3>Add new task</h3>
 <fluentask-task-input [saveTask]="save"></fluentask-task-input>
+
+<a md-button [routerLink]="['/tasks']">List</a>
